refactor: Geometry --> Feature
